--- a/index.html
+++ b/index.html
@@ -56,6 +56,13 @@
         }
     }
         
+        if (result === 'You win.') {
+            score.wins += 1;
+        } else if (result === 'You lose.') {
+            score.losses += 1;
+        } else if (result === 'Tie.') {
+            score.ties += 1;
+        }
 
         alert(`You picked ${playerMove}, computer picked ${computerMove}. ${result}`);
     }
