--- a/index.html
+++ b/index.html
@@ -20,9 +20,23 @@
         Scissors
     </button>
 
+    <button onclick="
+    score.wins = 0;
+    score.losses = 0;
+    score.ties = 0;
+    ">
+        Reset Score
+    </button>
+
 
 
 <script>
+    const score = {
+        wins: 0,
+        losses: 0,
+        ties: 0
+    }
+
     function playGame(playerMove) {
         const computerMove = pickComputerMove();
         
@@ -48,7 +62,7 @@
         }
     } else if (playerMove === 'rock') {
         if (computerMove === 'rock') {
-            result = 'Tie.';
+            result = 'Tie.'
         } else if (computerMove === 'paper') {
             result = 'You lose.';
         } else if (computerMove === 'scissors') {
@@ -56,7 +70,7 @@
         }
     }
         
-        if (result === 'You win.') {
+        if (result === 'You win.'){
             score.wins += 1;
         } else if (result === 'You lose.') {
             score.losses += 1;
@@ -64,7 +78,9 @@
             score.ties += 1;
         }
 
-        alert(`You picked ${playerMove}, computer picked ${computerMove}. ${result}`);
+
+        alert(`You picked ${playerMove}, computer picked ${computerMove}. ${result}
+Wins: ${score.wins} Losses: ${score.losses} Ties: ${score.ties}`);
     }
 
 
